# intelligent-planning-of-care-staff

./: .gitignore  Dockerfile  Ergebnisse.md  README.md  descriptive_analysis.ipynb  docker-compose.yaml  prediction.py  pyproject.toml  requirements.txt
grafana/: README.md  build_datasources.sh  docker-compose.yaml
grafana/dashboards/: csv-dashboard.json
grafana/grafana_etc/: grafana.ini
gui/: Home.py  create_holt_winter.py  create_holt_winters.py  create_random_forest.py  create_sarima.py  st_utils.py
gui/pages/: 1_Setup.py  2_Forecast.py
holt_winter/: holt winter.ipynb  holt_winter.py  holt_winter_notebook.ipynb
models/: test_call_wrapper.py  wrapper.py
models/holt_winter/: holt_winter.py  holt_winter_notebook.ipynb  model.py  requirements.txt
models/random-forest/: grid-tester.py  model.py  threaded-grid-tester.py
models/random_forest/: grid-tester.py  model.py  rf.py  rf_timeseriessplit.ipynb  threaded-grid-tester.py
models/sarima/: arima_analysis.ipynb  model.py  sarima.py  sarima_analysis.ipynb
output/: README.md  berlin.csv  burgenlandkreis.csv  cut-data.csv  descriptive_analysis.csv  latest-random-forest.csv  latest_history.csv  latest_holt_winter.csv  latest_random_forest.csv  latest_sarima.csv  leipzig.csv  mecklenburgische_seenplatte.csv  ostallgaeu.csv  saalfeld_rudolstadt.csv  weimarer_land.csv  wesel.csv
output/holt_winter/: holt-winter-08311-1714412957.csv  holt-winter-08311-1714653584.csv  holt-winter-08311-1714660013.csv  holt-winter-1713640163.csv  holt-winter-1714057902.csv  holt-winter-1714112016.csv  holt-winter-1714412790.csv  (+2 more)
(+419 files in other folders)
