[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "Intelligent-planning-of-care-staff"
version = "1.0.0"
dependencies = [
    "streamlit",
    "streamlit-extras",
    "pandas",
    "statsmodels",
    "scikit-learn",
    "pymannkendall",
    "plotly-express",
]


[tool.setuptools]
packages = ["models", "gui"]
